--- a/src/main/resources/templates/all-products.html
+++ b/src/main/resources/templates/all-products.html
@@ -12,12 +12,17 @@
 </head>
 <body>
 <nav class="navbar navbar-expand-lg sticky-top navbar-dark bg-primary">
-    <a class="navbar-brand" th:href="@{/user/}">Product Management System</a>
+    <a class="navbar-brand"  href="/"  >Product Management System</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto">
+            <li class="nav-item" style="color:white;">
+                Hello, <span style="color:white;"     th:text="${userName}">title</span>
+            </li>
+            &nbsp;
+            &nbsp;
             <li class="nav-item">
                 <form action="#" th:action="@{/logout}" method="post">
                     <button type="submit" class="btn btn-success btn-sm">Logout</button>
