--- a/src/main/resources/templates/all-users.html
+++ b/src/main/resources/templates/all-users.html
@@ -11,6 +11,27 @@
     </style>
 </head>
 <body>
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <a class="navbar-brand" href="/">Product Management System</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item" style="color:white;">
+                Hello, <span style="color:white;"     th:text="${userName}">title</span>
+            </li>
+            &nbsp;
+            &nbsp;
+            <li class="nav-item">
+                <form action="#" th:action="@{/logout}" method="post">
+                    <button type="submit" class="btn btn-success btn-sm">Logout</button>
+                </form>
+            </li>
+
+        </ul>
+    </div>
+</nav>
     <div class="container mx-auto pt-3">
 <!--        <h2>List Of All Users</h2>-->
 <!--        <hr>-->
