--- a/src/main/resources/templates/home-customer.html
+++ b/src/main/resources/templates/home-customer.html
@@ -18,12 +18,17 @@
 <!--<div sec:authorize="isAuthenticated()">-->
 <!--    Authenticated as <span sec:authentication="name"></span></div>-->
 <nav class="navbar navbar-expand-lg sticky-top navbar-dark bg-primary">
-    <a class="navbar-brand" href="#">Product Management System</a>
+    <a class="navbar-brand" href="/">Product Management System</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto">
+            <li class="nav-item" style="color:white;">
+                Hello, <span style="color:white;"     th:text="${userName}">title</span>
+            </li>
+            &nbsp;
+            &nbsp;
             <li class="nav-item">
                 <form action="#" th:action="@{/logout}" method="post">
                     <button type="submit" class="btn btn-success btn-sm">Logout</button>
@@ -34,18 +39,18 @@
     </div>
 </nav>
 <div class="container pt-3">
-    <div class="jumbotron pt-3">
-        <h1 class="display-4">List Of Products</h1>
-        <p class="lead">This will display you list of products</p>
-        <hr class="my-4">
-        <p>Click on the below button to list all the products</p>
-        <p class="lead">
-            <a class="btn btn-primary btn-mg" th:href="@{/customer/allProducts}" role="button">click Here</a>
-        </p>
-    </div>
+<!--    <div class="jumbotron pt-3">-->
+<!--        <h1 class="display-4">List Of Products</h1>-->
+<!--        <p class="lead">This will display you list of products</p>-->
+<!--        <hr class="my-4">-->
+<!--        <p>Click on the below button to list all the products</p>-->
+<!--        <p class="lead">-->
+<!--            <a class="btn btn-primary btn-mg" th:href="@{/customer/allProducts}" role="button">click Here</a>-->
+<!--        </p>-->
+<!--    </div>-->
 
     <div class="jumbotron pt-3">
-        <h1 class="display-4">Add New Product</h1>
+        <h1 class="display-4">List of All Products</h1>
         <hr class="my-4">
         <p>Click on the below button to add a new products</p>
         <p class="lead">
