--- a/src/main/resources/templates/home-user.html
+++ b/src/main/resources/templates/home-user.html
@@ -18,6 +18,11 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto">
+            <li class="nav-item" style="color:white;">
+                Hello, <span style="color:white;"     th:text="${userName}">title</span>
+            </li>
+            &nbsp;
+            &nbsp;
             <li class="nav-item">
                 <form action="#" th:action="@{/logout}" method="post">
                     <button type="submit" class="btn btn-success btn-sm">Logout</button>
@@ -28,15 +33,15 @@
     </div>
 </nav>
 <div class="container pt-3">
-<div class="jumbotron">
-    <h1 class="display-4">List Of Users</h1>
-    <p class="lead">This will display you list of users</p>
-    <hr class="my-4">
-    <p>Click on the below button to list all the users</p>
-    <p class="lead">
-        <a class="btn btn-primary btn-mg" th:href="@{/user/allUsers}" role="button">click Here</a>
-    </p>
-</div>
+<!--<div class="jumbotron">-->
+<!--    <h1 class="display-4">List Of Users</h1>-->
+<!--    <p class="lead">This will display you list of users</p>-->
+<!--    <hr class="my-4">-->
+<!--    <p>Click on the below button to list all the users</p>-->
+<!--    <p class="lead">-->
+<!--        <a class="btn btn-primary btn-mg" th:href="@{/user/allUsers}" role="button">click Here</a>-->
+<!--    </p>-->
+<!--</div>-->
     <div class="jumbotron pt-3">
         <h1 class="display-4">List Of Products</h1>
         <p class="lead">This will display you list of products</p>
@@ -54,14 +59,14 @@
 <!--            <a class="btn btn-primary btn-mg" th:href="@{/user/showFormForAddUser}" role="button">click Here</a>-->
 <!--        </p>-->
 <!--    </div>-->
-    <div class="jumbotron pt-3">
-        <h1 class="display-4">Add New Product</h1>
-        <hr class="my-4">
-        <p>Click on the below button to add a new products</p>
-        <p class="lead">
-            <a class="btn btn-primary btn-mg" th:href="@{/user/addProduct}" role="button">click Here</a>
-        </p>
-    </div>
+<!--    <div class="jumbotron pt-3">-->
+<!--        <h1 class="display-4">Add New Product</h1>-->
+<!--        <hr class="my-4">-->
+<!--        <p>Click on the below button to add a new products</p>-->
+<!--        <p class="lead">-->
+<!--            <a class="btn btn-primary btn-mg" th:href="@{/user/addProduct}" role="button">click Here</a>-->
+<!--        </p>-->
+<!--    </div>-->
 
 
 </div>
