--- a/src/main/resources/templates/add-user-form.html
+++ b/src/main/resources/templates/add-user-form.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
@@ -7,8 +7,6 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
           crossorigin="anonymous" />
-    <style type="text/css">
-    </style>
 </head>
 <body>
 <div class="container pt-4">
@@ -31,7 +29,6 @@
                 <label for="email">Email</label>
                 <input th:field="*{email}" type="text" class="form-control" id="email" placeholder="Email">
             </div>
-<!--        th:value="${authority.authority}"-->
             <select class="form-select col-md-6" aria-label="Role" >
                 <option selected>Select the user role</option>
                 <option value="ROLE_CUSTOMER">Customer</option>
