--- a/src/main/resources/templates/customer-add-product.html
+++ b/src/main/resources/templates/customer-add-product.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
@@ -7,8 +7,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
           crossorigin="anonymous" />
-    <style type="text/css">
-    </style>
+
 </head>
 <body>
 <nav class="navbar navbar-expand-lg sticky-top navbar-dark bg-primary">
@@ -40,6 +39,7 @@
     </form>
     <br>
     <table class="table table-striped">
+        <caption>Users Table</caption>
         <thead class="table-dark">
         <tr>
             <th scope="col">Id</th>
