--- a/src/main/resources/templates/home-user.html
+++ b/src/main/resources/templates/home-user.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html >
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
@@ -7,8 +7,6 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
           crossorigin="anonymous" />
-    <style type="text/css">
-    </style>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
@@ -33,15 +31,6 @@
     </div>
 </nav>
 <div class="container pt-3">
-<!--<div class="jumbotron">-->
-<!--    <h1 class="display-4">List Of Users</h1>-->
-<!--    <p class="lead">This will display you list of users</p>-->
-<!--    <hr class="my-4">-->
-<!--    <p>Click on the below button to list all the users</p>-->
-<!--    <p class="lead">-->
-<!--        <a class="btn btn-primary btn-mg" th:href="@{/user/allUsers}" role="button">click Here</a>-->
-<!--    </p>-->
-<!--</div>-->
     <div class="jumbotron pt-3">
         <h1 class="display-4">List Of Products</h1>
         <p class="lead">This will display you list of products</p>
@@ -51,23 +40,6 @@
             <a class="btn btn-primary btn-mg" th:href="@{/user/allProducts}" role="button">click Here</a>
         </p>
     </div>
-<!--    <div class="jumbotron pt-3">-->
-<!--        <h1 class="display-4">Add New User</h1>-->
-<!--        <hr class="my-4">-->
-<!--        <p>Click on the below button to add a new user</p>-->
-<!--        <p class="lead">-->
-<!--            <a class="btn btn-primary btn-mg" th:href="@{/user/showFormForAddUser}" role="button">click Here</a>-->
-<!--        </p>-->
-<!--    </div>-->
-<!--    <div class="jumbotron pt-3">-->
-<!--        <h1 class="display-4">Add New Product</h1>-->
-<!--        <hr class="my-4">-->
-<!--        <p>Click on the below button to add a new products</p>-->
-<!--        <p class="lead">-->
-<!--            <a class="btn btn-primary btn-mg" th:href="@{/user/addProduct}" role="button">click Here</a>-->
-<!--        </p>-->
-<!--    </div>-->
-
 
 </div>
 
