--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,68 +1,3 @@
-<!--<!DOCTYPE html>-->
-<!--<html xmlns:th="http://www.thymeleaf.org">-->
-<!--<head>-->
-<!--  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">-->
-<!--  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">-->
-<!--  <title>Login - Shopme Admin</title>-->
-<!--  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"-->
-<!--        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"-->
-<!--        crossorigin="anonymous" />-->
-<!--  <style type="text/css">-->
-<!--    form {-->
-<!--        position: fixed;-->
-<!--        top: 50%;-->
-<!--        left: 50%;-->
-<!--        transform: translate(-50%, -50%);-->
-<!--    }-->
-<!--</style>-->
-<!--</head>-->
-<!--<body style="background-color:#add8e6;">-->
-<!--<div class="container text-center" id="form">-->
-
-<!--  <form th:action="@{/authenticateTheUser}" method="post" style="max-width: 350px; margin: 0 auto;">-->
-
-<!--    <div th:if="${param.error}">-->
-<!--      <p class="text-danger">Invalid UserName or Password. Try again.</p>-->
-<!--    </div>-->
-
-<!--    <div th:if="${param.logout}">-->
-<!--      <p class="text-warning">You have been logged out.</p>-->
-<!--    </div>-->
-
-<!--    <div class="border border-secondary p-3 rounded">-->
-<!--      <p>Access to Shopme Control Panel</p>-->
-<!--      <p>-->
-<!--        <input type="email" name="email" class="form-control" placeholder="E-mail" required autofocus/>-->
-<!--      </p>-->
-<!--      <p>-->
-<!--        <input type="password" name="password" class="form-control" placeholder="Password" required />-->
-<!--      </p>-->
-<!--      <p>-->
-<!--        <input type="checkbox" name="remember-me" />&nbsp;Remember Me-->
-<!--      </p>-->
-<!--      <p>-->
-<!--        <input type="submit" value="Login" class="btn btn-primary" />-->
-<!--      </p>-->
-<!--    </div>-->
-<!--  </form>-->
-<!--</div>-->
-<!--</body>-->
-<!--</html>-->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 <!doctype html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
@@ -71,8 +6,6 @@
   <title>Login Page</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-  <!-- Reference Bootstrap files -->
   <link rel="stylesheet"
         href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
@@ -97,53 +30,31 @@
 
       <div style="padding-top: 30px" class="panel-body">
 
-        <!-- Login Form -->
         <form th:action="@{/authenticateTheUser}" method="post" style="max-width: 350px; margin: 0 auto;">
-
-<!--          <div th:if="${param.error}">-->
-<!--            <p class="text-danger">Invalid UserName or Password. Try again.</p>-->
-<!--          </div>-->
-
-<!--          <div th:if="${param.logout}">-->
-<!--            <p class="text-warning">You have been logged out.</p>-->
-<!--          </div>-->
-
-          <!-- Place for messages: error, alert etc ... -->
           <div class="form-group">
             <div class="col-xs-15">
               <div>
-
-
                 <div th:if="${param.error}" class="alert alert-danger col-xs-offset-1 col-xs-10">
                     Invalid username and password.
                 </div>
-
-
-
                 <div th:if="${param.logout}" class="alert alert-success col-xs-offset-1 col-xs-10">
                     You have been logged out.
                 </div>
-
-
               </div>
             </div>
           </div>
 
-          <!-- User name -->
           <div style="margin-bottom: 25px" class="input-group">
-            <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-
+            <span class="input-group-addon"><em class="glyphicon glyphicon-user"></em></span>
             <input type="text" name="username" placeholder="username" class="form-control">
           </div>
 
-          <!-- Password -->
           <div style="margin-bottom: 25px" class="input-group">
-            <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
+            <span class="input-group-addon"><em class="glyphicon glyphicon-lock"></em></span>
 
             <input type="password" name="password" placeholder="password" class="form-control" >
           </div>
 
-          <!-- Login/Submit Button -->
           <div style="margin-top: 10px" class="form-group">
             <div class="col-sm-6 controls">
               <button type="submit" class="btn btn-success">Login</button>
