--- a/src/main/resources/templates/Access-Denied.html
+++ b/src/main/resources/templates/Access-Denied.html
@@ -172,11 +172,11 @@
   </div>
   <div class="bat">
     <img class="wing leftwing"
-         src="https://www.blissfullemon.com/wp-content/uploads/2018/09/bat-wing.png">
+         src="https://www.blissfullemon.com/wp-content/uploads/2018/09/bat-wing.png" alt="img">
     <img class="body"
          src="https://www.blissfullemon.com/wp-content/uploads/2018/09/bat-body.png" alt="bat">
     <img class="wing rightwing"
-         src="https://www.blissfullemon.com/wp-content/uploads/2018/09/bat-wing.png">
+         src="https://www.blissfullemon.com/wp-content/uploads/2018/09/bat-wing.png" alt="img">
   </div>
   <img class="foregroundimg" src="https://www.blissfullemon.com/wp-content/uploads/2018/09/HauntedHouseForeground.png" alt="haunted house">
 </div>
