security hotspots resolved1

--- a/src/main/resources/templates/all-products.html
+++ b/src/main/resources/templates/all-products.html
@@ -38,7 +38,7 @@
     <br>
 <br>
     <table class="table table-striped">
-        <caption>Users List Table</caption>
+        <caption style="display:none;">Users List Table</caption>
         <thead class="table-dark">
 
         <tr>
