--- a/src/main/resources/templates/all-users.html
+++ b/src/main/resources/templates/all-users.html
@@ -34,7 +34,7 @@
         <br>
         <br>
         <table class="table table-striped">
-            <caption>Users Table</caption>
+            <caption style="display:none;">Users Table</caption>
             <thead class="table-dark">
 
             <tr>
