--- a/src/main/resources/templates/customer-add-product.html
+++ b/src/main/resources/templates/customer-add-product.html
@@ -39,7 +39,7 @@
     </form>
     <br>
     <table class="table table-striped">
-        <caption>Users Table</caption>
+        <caption style="display:none;">Users Table</caption>
         <thead class="table-dark">
         <tr>
             <th scope="col">Id</th>
