--- a/src/main/resources/templates/customer-all-products.html
+++ b/src/main/resources/templates/customer-all-products.html
@@ -36,7 +36,7 @@
 
   <br>
   <table class="table table-striped">
-    <caption>Users Tabel</caption>
+    <caption style="display:none;">Users Tabel</caption>
     <thead class="table-dark">
     <tr>
       <th scope="col">Id</th>
