--- a/src/main/resources/templates/error-404.html
+++ b/src/main/resources/templates/error-404.html
@@ -101,9 +101,9 @@
   </svg>
 </div>
 <div class="text">
-  <h1>404 Error</h1>
-  <h2>Couldn't launch :(</h2>
-  <h3>Page Not Found - lets take you <a th:href="@{/}">BACK</a></h3>
+  <h1>400 Error</h1>
+  <h2>BAD REQUEST :(</h2>
+  <h3>BAD REQUEST - lets take you <a th:href="@{/}">BACK</a></h3>
 </div>
 </body>
 
