--- a/src/main/resources/templates/home-user.html
+++ b/src/main/resources/templates/home-user.html
@@ -7,29 +7,18 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
           crossorigin="anonymous" />
+    <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-    <a class="navbar-brand" href="#">Product Management System</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ml-auto">
-            <li class="nav-item" style="color:white;">
-                Hello, <span style="color:white;"     th:text="${userName}">title</span>
-            </li>
-            &nbsp;
-            &nbsp;
-            <li class="nav-item">
-                <form action="#" th:action="@{/logout}" method="post">
-                    <button type="submit" class="btn btn-success btn-sm">Logout</button>
-                </form>
-            </li>
+<div th:replace="nav :: navbar">
 
-        </ul>
-    </div>
-</nav>
+</div>
+
+<script>
+$(function(){
+  $("#nav-placeholder").load("nav.html");
+});
+</script>
 <div class="container pt-3">
     <div class="jumbotron pt-3">
         <h1 class="display-4">List Of Products</h1>
